app/assets/stylesheets/indicators.css.scss
body {
  font-size: 11px;
  font-family: Arial;
}

.right {
  float: right;
}

$light-grey: #666666;
$medium-grey: #656565;
$dark-grey: #333333;
$light-blue1: #dbe4ed;
$light-blue2: #91adc7;
$light-blue3: #cfdbe7;
$light-blue4: #94afc9;
$medium-blue1: #5e87ae;
$medium-blue2: #296093;
$medium-blue3: #7a9cbc;
$medium-blue4: #7094b7;
$dark-blue1: #42729f;
$dark-blue2: #00417e;
$dark-blue3: #19548b;
$highlight-color: #abc0d5;
$inactive-tab-color: $medium-blue4;
$active-tab-color: $dark-blue3;
$tab-nav-height: 30px;

h1 {
  @extend .big-font;
  border-bottom: 1px solid $light-blue3;
  color: $dark-blue2;
  margin-bottom: 10px;
  padding: 0 15px;
  font-weight: normal;
}

.goal_A {
  .goal_code {
    background-color: #247C24;
  }
  .goal_title {
    background-color: #C4DCC4;
  }
}

.goal_B {
  .goal_code {
    background-color: #247CA7;
  }
  .goal_title {
    background-color: #C4DCE7;
  }
}

.goal_C {
  .goal_code {
    background-color: #7A4951;
  }
  .goal_title {
    background-color: #DFCCCC;
  }
}

.goal_D {
  .goal_code {
    background-color: #7A4990;
  }
  .goal_title {
    background-color: #DFCCE0;
  }
}

.goal_E {
  .goal_code {
    background-color: #B96951;
  }
  .goal_title {
    background-color: #F6DFD7;
  }
}

.big-font {
  font-size: 20px;
}

.medium-font {
  font-size: 16px;
}

.grey-font {
  color: $light-grey;
}

.blue-border {
  border: 1px solid $dark-blue1;
}

#indicators-count-legend {
  @extend .blue-border;
  height: 18px;
  margin-bottom: 15px;
  & > div {
    float: left;
    margin: 0;
    padding: 0;
    text-align: right;
  }
}

.indicator-cnt-0 {
  background-color: $light-blue1;
  color: $light-grey;
}

.indicator-cnt-1 {
  background-color: $light-blue2;
  color: #ffffff;
}

.indicator-cnt-2 {
  background-color: $medium-blue1;
  color: #ffffff;
}

.indicator-cnt-3 {
  background-color: $medium-blue2;
  color: #ffffff;
}

$matrix-target-height: 80px;
$matrix-target-width: 60px;

#goals-container {
  & > div {
    clear: both;
  }

  .goal_code {
    float: left;
    width: 20%;
    height: 90px;
    line-height: 90px;
    font-size: 32px;
    vertical-align: top;
    color: #FFF;
    text-align: center;
  }

  .goal_title {
    float: left;
    width: 80%;
    line-height: 18px;
    font-size: 11px;
    overflow: hidden;
    height: $matrix-target-height + 10px;

    .title_field {
      padding:2px;
    }
  }
}

#targets-container {
  & > div {
    cursor: pointer;
    cursor: hand;
    float: left;
    width: $matrix-target-width;
    height: $matrix-target-height;
    padding: 5px;
  }

  & > div.selected {
    background: #000000;
  }

  .code {
    width: 100%;
    text-align: right;
    white-space: nowrap;
    overflow: hidden;
    @extend .big-font;
    line-height: $matrix-target-height / 2;
  }

  .keyword {
    width: 100%;
    font-size: 11px;
    line-height: 11px;
  }

}

#headlines-container {
  & > div {
    height: 40px;
    border-bottom: 1px solid white;
  }
  .headline {
    clear: both;
    .code {
      background-color: $light-blue4;
      color: white;
      @extend .medium-font;
      text-align: center;
      height: 100%;
      line-height: 40px;
      width: 6%;
      float: left;
    }
    .code.selected {
      background-color: $dark-blue2;
    }
    .title {
      background-color: $light-blue1;
      height: 100%;
      width: 76%;
      float: left;
      padding-left: 1%;
    }
    .title.selected {
      background-color: $medium-blue3;
    }
    .title-inner {
      height: 100%;

    }
    .indicator-count {
      text-align: center;
      height: 100%;
      line-height: 40px;
      width: 16%;
      margin-left: 1%;
      float: left;
      span {
        @extend .medium-font;
      }
    }
  }
}

#graphic {
  #focal-areas-container {
    clear: both;
    div.indicator-count {
      width: 25%;
      text-align: center;
      float: left;
      padding: 4px 0;
      span {
        @extend .medium-font;
      }
    }
  }
  button {
    float: left;
    width: 75%;
    border-radius: 0;
    color: white;
    text-transform: uppercase;
    background-image: none;
    padding: 14px 9px;
    @extend .medium-font;
    &.first {
      clear: both;
    }
  }
  button.Responses {
    background-color: #26963c;
  }
  button.Pressures {
    background-color: #c71d22;
  }
  button.Benefits {
    background-color: #6c68af;
  }
  button.State {
    background-color: #f36f21;
  }
}

#search {
  height: $tab-nav-height + 18px;
}

.ui-autocomplete {
  background: #FFFFFF;
}

.ui-autocomplete-category {
  font-weight: bold;
  padding: .2em .4em;
  margin: .8em 0 .2em;
  line-height: 1.5;
}

#filters-and-results {
  @extend .blue-border;
  min-height: 660px;
  position: relative;
}

#filters {
  background-color: $dark-blue1;
  height: 32px;
  select {
    background-color: $dark-blue1;
    color: #FFFFFF;
    height: 28px;
    margin-top: 2px;
    margin-left: 2px;
    width: 100%;

    option {
      background-color: $dark-blue1;
    }
  }
  button {
    margin-top: 5px;
  }
}

.sidebar-div {
  clear: both;
  color: $dark-grey;
  padding: 0 15px;

  &.indicators-count-wrapper {
    position: absolute;
    bottom: 53px;
    right: 0;
  }

  &.legend-for-indicators {
    position: absolute;
    right: 0;
    bottom: 0;
    left: 0;
  }
}

#indicators-results-controls {
  height: 60px;
  clear: both;
  a {
    color: $medium-grey;
    float: right;
    margin: -10px 15px 0 0;
  }
}

#indicators-count {
  width: 60px;
  height: 35px;
  padding-top: 15px;
  padding-right: 15px;
  text-align: right;
  float: right;
  span {
    @extend .big-font;
  }
}

#indicators-container {
  margin: 0 15px 10px;
  float: left;

  a, a:hover {
    text-decoration: none;
    color: $dark-grey;
  }

  span.title {
    line-height: 22px;
    float: left;
    padding-left: 20px;
  }
  & > div {
    position: relative;
    float: left;
    width: 100%;

    &.highlighted {
      background-color: $highlight-color;
    }
  }
  div.little-square {
    height: 10px;
    width: 10px;
    float: left;
    background-color: $medium-blue3;
    margin: 5px;
    position: absolute
  }
}

.nav {
  margin-bottom: 0;
  li {
    width: 190px;
  }

  .active > a, .active > a:hover {
    background-color: $active-tab-color;
  }

  img {
    float: right;
    margin-right: 10px;
  }
}

.nav-pills {
  & > li > a {
    border-radius: 0;
    margin-bottom: 0;
    background-color: $inactive-tab-color;
    display: block;
    height: $tab-nav-height;
    margin-right: 0;
    border-right: 1px solid $active-tab-color;
    @extend .medium-font;
    color: white;

    & > div {
      float: left;
      width: 80px;
    }
  }
}

.tab-content {
  @extend .blue-border;

  & > .tab-pane {
    min-height: 650px;
  }
}

.tab-content-main {
  width: 95%;
  margin: 0px auto 10px auto;
}

